minor information changes

--- a/public/Content/app.css
+++ b/public/Content/app.css
@@ -1,8 +1,8 @@
 /* 
-    Express Portfolio Site
-    Trevor Williamson
-    822916995
-    October 25, 2020
+    Final Group Project
+    All our info here:
+    
+    November 11, 2020
  */
 
 /**
