added Add Survey button to home page, also no longer requires auth

--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -10,13 +10,41 @@
         <h1 class="display-4" style="text-align: center;">Simple Surveys</h1>
         <h4 class="display-8" style="text-align: center;">by Quarantine Coders</h4>
         <br>
-        <br>
-        <br>
-        <br>
 
     <h3 style="text-align: center;">Get the answers you need, for the price you deserve!</h3>
     <br>
     <br>
+
+    <!-- Survey Start -->
+
+    <div id="main-body" class="container-fluid" style="max-width: 100%; text-align: center; margin-bottom: 75px; margin-left: 25%;">
+      <div class="row">
+          <div class="col-md-offset-3 col-md-6">
+      
+
+              <a href="/surveys-list/add" class="btn btn-primary" role="button">
+              <i class="fas fa-plus-circle"></i> Add a Survey</a>
+              <br>
+              <br>
+              <table class="table table-bordered table-striper table-hover">
+                  <!-- Header Row-->
+                  <tr>
+                          <th class="text-center">Survey Name</th>
+                          <th class="text-center">Description</th>
+      
+
+                          <th class="text-center"></th>
+                          <th class="text-center"></th>
+
+                  </tr>
+      
+              </table>
+          </div>
+      </div>
+      </div>
+
+    <!-- Survey End -->
+
 
     <!-- Table -->
     <table style="height: 300px; margin-left: auto; margin-right: auto;" width="900", border="2">
