Table now functions on homepage

--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -18,6 +18,7 @@
     <!-- Survey Start -->
 
     <div id="main-body" class="container-fluid" style="max-width: 100%; text-align: center; margin-bottom: 75px; margin-left: 25%;">
+
       <div class="row">
           <div class="col-md-offset-3 col-md-6">
       
@@ -37,6 +38,27 @@
                           <th class="text-center"></th>
 
                   </tr>
+
+                              <!-- Repeatable Template Row -->
+
+            <% for(let count = 0; count < SurveyList.length; count++) { %>
+              <tr>
+                  <td class="text-center"><%= SurveyList[count].name %></td>
+                  <td class="text-center"><%= SurveyList[count].description %></td>
+              
+
+
+                  <td class="text-center">
+                      <a href="/surveys-list/edit/<%= SurveyList[count]._id %>" class="btn btn-primary">
+                      <i class="fas fa-pencil-alt"></i> Update</a>
+                  </td>
+                  <td class="text-center">
+                      <a href="/surveys-list/delete/<%= SurveyList[count]._id %>" class="btn btn-danger">
+                      <i class="fas fa-trash-alt"></i> Delete</a>
+                  </td>
+
+              </tr>
+          <% } %>
       
               </table>
           </div>
@@ -47,23 +69,23 @@
 
 
     <!-- Table -->
-    <table style="height: 300px; margin-left: auto; margin-right: auto;" width="900", border="2">
+    <table style="height: 300px; margin-left: auto; margin-right: auto;">
       <tbody>
       <tr>
-      <td style="width: 300px;">&nbsp;<img src="Assets/images/nowallet.png" alt="" width="225" height="200" /></td>
-      <td style="width: 300px;">&nbsp;<img src="Assets/images/data.png" alt="" width="250" height="225" /></td>
-      <td style="width: 300px;">&nbsp;<img src="Assets/images/audience.png" alt="" width="300" height="175" /></td>
+      <td style="width: 300px; border: solid black">&nbsp;<img src="Assets/images/nowallet.png" alt="" width="225" height="200" /></td>
+      <td style="width: 300px; border: solid black">&nbsp;<img src="Assets/images/data.png" alt="" width="250" height="225" /></td>
+      <td style="width: 300px; border: solid black">&nbsp;<img src="Assets/images/audience.png" alt="" width="300" height="175" /></td>
       </tr>
       <tr>
-      <td style="width: 300px;">
+      <td style="width: 300px; border: solid black">
       <p style="text-align: center;"><strong>Comepletely Free</strong></p>
       <p style="text-align: center;">Put that wallet away and get the answers you need!</p>
       </td>
-      <td style="width: 300px; text-align: center;">
+      <td style="width: 300px; text-align: center; border: solid black">
       <p><strong>Easy-To-Access Results</strong></p>
       <p>Always be able to check back with past surveys.</p>
       </td>
-      <td style="width: 300px;">
+      <td style="width: 300px; border: solid black">
       <p style="text-align: center;"><strong>&nbsp;</strong><strong>Know Your Audience</strong></p>
       <p style="text-align: center;">Use your surveys to gear products and services to your customers.</p>
       </td>
