--- a/server/views/survey/add.ejs
+++ b/server/views/survey/add.ejs
@@ -31,7 +31,7 @@
                     <input type="text" class="form-control"
                     id="q1TextField"
                     placeholder="Question 1"
-                    name="question 1" required>
+                    name="q1" required>
                 </div>
 
                 <div class="form-group">
@@ -39,7 +39,7 @@
                     <input type="text" class="form-control"
                     id="q2TextField"
                     placeholder="Question 2"
-                    name="question 2" required>
+                    name="q2" required>
                 </div>
 
                 <div class="form-group">
@@ -47,7 +47,7 @@
                     <input type="text" class="form-control"
                     id="q3TextField"
                     placeholder="Question 3"
-                    name="question 3" required>
+                    name="q3" required>
                 </div>
 
                 <div class="form-group">
@@ -55,7 +55,7 @@
                     <input type="text" class="form-control"
                     id="q4TextField"
                     placeholder="Question 4"
-                    name="question 4" required>
+                    name="q4" required>
                 </div>
 
                 <div class="form-group">
@@ -63,7 +63,7 @@
                     <input type="text" class="form-control"
                     id="q5TextField"
                     placeholder="Question 5"
-                    name="question 5" required>
+                    name="q5" required>
                 </div>
 
                 <button class="btn btn-primary" type="submit">
