--- a/server/views/survey/edit.ejs
+++ b/server/views/survey/edit.ejs
@@ -36,7 +36,7 @@
                     <input type="text" class="form-control"
                     id="q1TextField"
                     placeholder="Question 1"
-                    name="question 1"
+                    name="q1"
                     value="<%= survey.q1 %>" 
                     required>
                 </div>
@@ -46,7 +46,7 @@
                     <input type="text" class="form-control"
                     id="q2TextField"
                     placeholder="Question 2"
-                    name="question 2"
+                    name="q2"
                     value="<%= survey.q2 %>" 
                     required>
                 </div>
@@ -56,7 +56,7 @@
                     <input type="text" class="form-control"
                     id="q3TextField"
                     placeholder="Question 3"
-                    name="question 3"
+                    name="q3"
                     value="<%= survey.q3 %>" 
                     required>
                 </div>
@@ -66,7 +66,7 @@
                     <input type="text" class="form-control"
                     id="q4TextField"
                     placeholder="Question 4"
-                    name="question 4"
+                    name="q4"
                     value="<%= survey.q4 %>" 
                     required>
                 </div>
@@ -76,7 +76,7 @@
                     <input type="text" class="form-control"
                     id="q5TextField"
                     placeholder="Question 5"
-                    name="question 5"
+                    name="q5"
                     value="<%= survey.q5 %>" 
                     required>
                 </div>
